--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,12 +7,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  fontFamily: 'Poppins'
+  fontFamily: 'Poppins';
+  background-color: white;
 }
+
+/* body > div {
+  background-color: white;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  background-color: white;
 }
 
 #root {
